@@ -43,9 +43,9 @@ enum {MANAGETOOLSMENUITEM=0xd000,TOOLNUMBER};
 //help
 enum {ABOUTMENUITEM=0xe000,ABOUTQTMENUITEM,HELPMENUITEM};
 
-enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,SYNTAXHILITE,USESINGLE,AUTOSAVE,NODUPLICATE,NOWARN,AUTOSHOW,BEKIND,SETFONT,MAXPREFSWIDGETS};
+enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,SYNTAXHILITE,USESINGLE,AUTOSAVE,NODUPLICATE,NOWARN,AUTOSHOW,BEKIND,MAXPREFSWIDGETS};
 enum {MAXTABCHARS=0,MAXHISTORY,MAXFUNCDEPTH,COMPLETIONSIZE,TABWIDTH,MENUWIDTH,MAXRECENTS,MSGCHECKTIME,MAXPREFSINTWIDGETS};
-enum {FUNCTIONCOMBO=0,THEMECOMBO,FONTNAMECOMBO,FONTSIZECOMBO,PREFSTERMCOMMAND,PREFSROOTCOMMAND,PREFSQTDOCDIR,PREFSBROWSERCOMMAND,PREFSCURRENTFONT,BMHIGHLIGHTCOLOUR,CURRENTLINECOLOUR,SHORTCUTSCOMBO,PREFSMENUSTYLE,MAXPREFSOTHERWIDGETS};
+enum {FUNCTIONCOMBO=0,THEMECOMBO,FONTNAMECOMBO,FONTSIZECOMBO,PREFSTERMCOMMAND,PREFSPRINTCOMMAND,PREFSROOTCOMMAND,PREFSQTDOCDIR,PREFSBROWSERCOMMAND,PREFSCURRENTFONT,BMHIGHLIGHTCOLOUR,CURRENTLINECOLOUR,SHORTCUTSCOMBO,PREFSMENUSTYLE,MAXPREFSOTHERWIDGETS};
 
 enum {FINDNEXT=1,FINDPREV,FINDREPLACE};
 
@@ -292,6 +292,7 @@ class KKEditClass : public QObject
 		QString						prefsQtDocDir;
 		bool							prefsNoOpenduplicate=false;
 		bool							prefsNoWarnings=false;
+		QString						prefsPrintCommand;
 
 //app
 		int							prefsMsgTimer;
